2009-07-10  Andreas K. Foerster  <info@akfoerster.de>

	* avtfilechooser.c [HAS_SCANDIR]:
	always use my "compare_dirent" instead of "alphasort"

2009-07-09  Andreas K. Foerster  <info@akfoerster.de>

	* avtter.c (avtterm_size, avtterm_update_size)
	(CSI_sequence, avtterm_initialize):
	better handling of max_x, max_y, region_min_y, region_max_y

2009-07-08  Andreas K. Foerster  <info@akfoerster.de>

	* renamed directory "mingw32" to "mingw"
	scripts adapted
	new target "mingw" in toplevel Makefile

2009-07-06  Andreas K. Foerster  <info@akfoerster.de>

	* avtar.c (avt_draw_balloon): add missing SDL_SetClipRect
	(avt_set_balloon_color): adapted

	* avatarsay.c (avatar_command): new command "textcolor"

	* avtar.c (avt_draw_balloon):
	when there is no avatar, center the textarea

2009-07-05  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_set_balloon_color)
	(avt_set_balloon_color_name, avt_set_text_background_ballooncolor):
	new functions
	avatar.c (avt_draw_balloon, avt_normal_text): adapted
	avtterm.c (set_background_color): adapted (15 = ballooncolor)
	akfavatar.pas (TextBackground): adapted
	avatarsay.c (avatar_command): new command "ballooncolor"

2009-06-24  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.17.0 released

2009-06-20  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_name_to_color): export function

2009-06-19  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_get_color_name): new function

2009-06-13  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, akfavatar.pas: avt_bool_t is a char now!

	* avtfilechooser (get_file): support scandir (not on MinGW)
	(get_directory, compare_dirent): new functions

2009-06-12  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_import_image_stream)
	(avt_show_image_stream, avt_load_audio_stream):
	new functions

2009-06-11  Andreas K. Foerster  <info@akfoerster.de>
